# aloha_sim

./: .gitignore  .pre-commit-config.yaml  pixi.toml  pyproject.toml  ruff.toml
aloha_sim/: aloha.py  cartesian_interpolator.py  ik_solver.py  joint_group.py  motion_planner.py  viewer.py
aloha_sim/scripted_policies/: marker.py
aloha_sim/tasks/base/: aloha2_task.py
aloha_sim/utils/: collision_checking.py  visualization.py
notebooks/: DataCollection.ipynb
