[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aloha_sim"
version = "1.0.0"
description = "Aloha simulation package"
requires-python = ">=3.10"
dependencies = [
    "absl-py",
    "dm-control>=1.0.31",
    "dm-env>=1.6",
    "grpcio",
    "immutabledict",
    "mediapy",
    "mujoco>=3.3.3",
    "numpy",
    "pillow",
    "rich",
    "robot_descriptions",
    "mink",
    "ompl @ https://github.com/ompl/ompl/releases/download/prerelease/ompl-1.8.0-cp311-cp311-manylinux_2_28_x86_64.whl",
    "time_optimal_trajectory_generation_py @ git+https://github.com/JafarAbdi/time_optimal_trajectory_generation_py/",
    "ndcurves",
]

[project.optional-dependencies]
inference = [
    "safari-sdk>=2.4.0"
]
dev = [
  "jupyterlab",
  "ipympl",
  "ipywidgets>=8.1.7,<9",
  "jupyterlab-widgets",
  "mediapy",
]

[tool.setuptools.package-data]
"aloha_sim" = ["assets/**"]

[tool.setuptools.packages.find]
where = ["."]
